# weekly-review-generator

./: .gitignore  GEMINI.md  README.md  client.py  display.py  logic.py  markdown_output.py  notes.py  prompts.py  pyproject.toml  schema.py  summarizer.py
examples/sample-week/Goals/2026/_monthly/: 2026-03.md
examples/sample-week/Timeline/: 2026-03-02.md  2026-03-03.md
providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  groq.py  ollama.py
src/: main.py
src/weekly_review/: discovery.py  display.py  logic.py  markdown_output.py  prompts.py  schema.py  triage.py  voice_memos.py
tests/: test_discovery.py  test_markdown_output.py  test_notes.py  test_providers.py  test_schema.py  test_summarizer.py  test_triage.py  test_voice_memos.py
tests/fixtures/: 2026-02-23.md  2026-02-24.md
