[project]
name = "daily-note-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=1.65.0",
    "local-first-common @ git+https://github.com/jamalhansen/local-first-common.git@main",
    "pydantic>=2.12.5",
    "python-frontmatter>=1.1.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
